force-app/main/default/objects/Apttus__WizardRule__c/Apttus__WizardRule__c.object-meta.xml
<CustomObject>
    <description>Individual rules which are applied within a ruleset.</description>
    <label>Wizard Rule (Deprecated)</label>
    <nameField>
        <label>Wizard Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>