force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Rule within a Ruleset is Active. Setting Wizard Design as Active automatically activates the included rules.</description>
    <inlineHelpText>Signifies that the Rule within a Ruleset is Active. Setting Wizard Design as Active automatically activates the included rules.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>