force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__InputResponseRuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InputResponseRuleType__c</fullName>
    <description>The rule type for the input</description>
    <inlineHelpText>The rule type for the input</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Input Expression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>