force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__ResultantValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ResultantValue__c</fullName>
    <description>The value that should result for this input based on the value of another input</description>
    <inlineHelpText>The value that should result for this input based on the value of another input</inlineHelpText>
    <label>Resultant Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>