force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__RuleExpressionRuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuleExpressionRuleType__c</fullName>
    <description>Rule type for rule expressions</description>
    <inlineHelpText>Rule type for rule expressions</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Go To Input</fullName>
            </value>
            <value>
                <fullName>Go To Step</fullName>
            </value>
            <value>
                <fullName>Go To Wizard</fullName>
            </value>
            <value>
                <fullName>Determine Focus Object</fullName>
            </value>
            <value>
                <fullName>Determine Record Type</fullName>
            </value>
            <value>
                <fullName>Determine Doc Gen</fullName>
            </value>
            <value>
                <fullName>Invoke Object Actions</fullName>
            </value>
            <value>
                <fullName>Go To Page</fullName>
            </value>
            <value>
                <fullName>Go To URL</fullName>
            </value>
            <value>
                <fullName>Go To Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>