force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Sequence__c</fullName>
    <description>The sequence number of this rule within a ruleset</description>
    <inlineHelpText>The sequence number of this rule within a ruleset</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>