force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__ToInputControl__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ToInputControl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Input Control this is associated to</description>
    <inlineHelpText>The Input Control this is associated to</inlineHelpText>
    <label>To Input Control</label>
    <referenceTo>Apttus__WizardInputControl__c</referenceTo>
    <relationshipName>Wizard_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>