force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Value__c</fullName>
    <description>The value defined in an expression that is used to determine if the condition is met</description>
    <inlineHelpText>The value defined in an expression that is used to determine if the condition is met</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>