force-app/main/default/objects/Apttus__WizardRule__c/fields/Apttus__WizardRuleset__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardRuleset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ruleset this rule applies to</description>
    <inlineHelpText>The ruleset this rule applies to</inlineHelpText>
    <label>Wizard Ruleset</label>
    <referenceTo>Apttus__WizardRuleset__c</referenceTo>
    <relationshipName>WizardRules</relationshipName>
    <type>Lookup</type>
</CustomField>